# webscraping-samsung

./: README.md  pyproject.toml  requirements.txt
coleta/coleta/: data.csv  data.json  data.jsonl
coleta/coleta/spiders/: notebook.py
data/: data.jsonl  mercadolivre.db
src/dashboard/: app.py
src/extracao/coleta/: settings.py
src/transformacao/: main.py
