[project]
name = "scrapy-samsung"
version = "0.1.0"
description = "Web Scraping produtos Samsung"
authors = [
    {name = "ValmirJrDS",email = "valmirmoreirajunior@gmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
